=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0 CA
 - Merged: Merge changes r5275 - r5323 from the trunk. (windmillway)
 - Changed: Tidied up a few more Navigator married names (Still Step Families to do)(windmillway)
 - Merged: Merge changes r5245 - r5274 from the trunk. (windmillway)
 - Changed: Fixed wrong path for "Find" function. Tidied up a few Navigator married names (windmillway)
 - Merged: Merge changes r5235 - r5244 from the trunk. (windmillway)
 - Changed: Paths to files in new GEDFact_assistant/CENS/ directory <windmillway)
 - Added: New subdirectories to GEDFact_assistant module {windmillway)
 - Changed: Renamed census_assistant module to GEDFact_assistant module (windmillway)
 - Changed: Added condition to only allow Shared note "assisted" icon when Census assistant module is present (windmillway)
 - Merged: Merge changes r5225 - r5234 from the trunk. (windmillway)
 - Changed: Added Shared note input using "Assistant". Now creates shared note (windmillway)
 - Merged: Merge changes r5214 - r5224 from the trunk. (windmillway)
 - Merged: Merge changes r5209 - r5213 from the trunk. (windmillway)
 - Merged: Merge changes r5208 - r5208 from the trunk. (windmillway)
 - Merged: Merge changes r5204 - r5207 from the trunk. (windmillway)
 - Merged: Merge changes r5196 - r5203 from the trunk. (windmillway)
 - Merged: Merge changes r5176 - r5195 from the trunk. (windmillway)
 - Merged: Merge changes r5162 - r5175 from the trunk. (windmillway)
 - Merged: Merge changes r5149 - r5161 from the trunk. (windmillway)
 - Merged: Merge changes r5128 - r5148 from the trunk. (windmillway)
 - Merged: Merge changes r5122 - r5127 from the trunk. (windmillway)
 - Added: Added missing Fact Tags to Note.php (windmillway)