@@ -1,0 +1,76 @@
+<?php
+/**
+* Code for Extracting Shared Note Indi Links for GEDFact_assistant
+*
+* phpGedView: Genealogy Viewer
+* Copyright (C) 2002 to 2009  PGV Development Team.  All rights reserved.
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*
+* @package PhpGedView
+* @subpackage GEDFact_assistant
+* @version $Id$
+*/
+
+//get values of input fields
+	$noteid 	= addslashes($_GET['noteid']);		 //-- Note Id
+	$TBLPREFIX 	= addslashes($_GET['tblprefix']);	 //-- table prefix
+	$DBHOST 	= addslashes($_GET['dbhost']);		 //-- MySQL host Name
+	$DBUSER		= addslashes($_GET['dbuser']);		 //-- MySQL database User Name
+	$DBPASS		= addslashes($_GET['dbpass']);		 //-- MySQL database User Password
+	$DBNAME		= addslashes($_GET['dbname']);		 //-- The MySQL database name where you want PHPGedView to build its tables
+
+// database info: Change password and DB Name ===================
+	$db = mysql_connect($DBHOST, $DBUSER, $DBPASS) or die (mysql_error());
+	mysql_select_db ($DBNAME, $db) or die (mysql_error());
+
+//Now Refresh the table .. id=from_mysql
+	$row_count = 0;
+	$output  = "<table width=\'220\' border=\'0\' cellpadding=\'0\' cellspacing=\'0\' class=\'table1\'>";
+	$output .= "<tr>";
+	$output .= "<td width=\'10\' align=\'left\' bgcolor=\'#AAAAAA\'><span class=\'style1\'>#</span></td>";
+	$output .= "<td width=\'30\' align=\'left\' bgcolor=\'#AAAAAA\'><span class=\'style1\'>Id</span></td>";
+	$output .= "<td wrap=\'nowrap\' width=\'80\' align=\'left\' bgcolor=\'#AAAAAA\'><span class=\'style1\'>Name</span></td>";
+	$output .= "<td width=\'20\' align=\'center\' bgcolor=\'#AAAAAA\'><span class=\'style1\'>Add</span></td>";
+	$output .= "</tr>";
+
+	$res_indis = mysql_query("SELECT 'INDI' AS type, l_from, l_to FROM {$TBLPREFIX}link, {$TBLPREFIX}individuals WHERE l_from LIKE 'I%' AND i_file=l_file AND i_id=l_from AND l_file='1' AND l_type='NOTE' AND l_to='$noteid'");
+	while ($rows = mysql_fetch_array($res_indis)) {
+		$srno = $rows['l_from'];
+		$u_name = "Name for ".$rows['l_from'];
+		$u_email = $rows['l_to'];
+		$row_style = ($row_count % 2) ? "row1" : "row2";
+		$output .= "<tr class=\'".$row_style."\'><td>".($row_count+1)."<td>".$srno."</td><td>".$u_name."</td><td align='center'><input type='checkbox' checked /></td></tr>";
+		$row_count = $row_count + 1;
+	}
+
+//Free Results
+	mysql_free_result($res_indis);
+
+	$output .= "</table>";
+	
+?>
+
+<?php //update table ?>
+from_mysql_obj = document.getElementById( "from_mysql" );
+from_mysql_obj.innerHTML = "<?php echo $output; ?>";
+
+<?php //update status box ?>
+my_status = document.getElementById( "status" );
+my_status.innerHTML = 'Ready';
+
+
+
+
